--- a/lab_1/src/style.css
+++ b/lab_1/src/style.css
@@ -672,6 +672,7 @@ footer {
 .social__items {
   display: flex;
   column-gap: 37px;
+  flex-wrap: wrap;
 }
 
 /* Just email lol*/
@@ -687,12 +688,10 @@ footer {
 
 /* Info links */
 .info__links {
-  max-height: 104px;
-
   display: flex;
   flex-wrap: wrap;
   row-gap: 16px;
-  column-gap: 60px;
+  column-gap: 30px;
 }
 
 .info__link {
@@ -700,6 +699,7 @@ footer {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.25px;
+  flex-basis: 29%;
 }
 
 .info__link:hover {
@@ -720,7 +720,7 @@ footer {
   row-gap: 30px;
   flex-wrap: wrap;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .form__input {
@@ -898,5 +898,9 @@ footer {
 
   .footer__item {
     width: 100%;
+  }
+
+  .form__row {
+    justify-content: space-around;
   }
 }
