--- a/react-ts/src/App.css
+++ b/react-ts/src/App.css
@@ -12,6 +12,14 @@
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+body {
+  color: #2f2f2f;
+}
+
 #page {
   display: flex;
   flex-direction: column;
