feat: messages on pages if entity or entities are not found

--- a/react-ts/src/components/SingleEntityPage/SingleEntityPage.css
+++ b/react-ts/src/components/SingleEntityPage/SingleEntityPage.css
@@ -33,3 +33,14 @@
 .entity-content a {
   color: var(--link-blue);
 }
+
+.entity-error {
+  align-self: center;
+  margin-top: auto;
+  text-align: center;
+}
+
+.entity-error a {
+  color: var(--link-yellow);
+  text-decoration: underline;
+}
