feat: minor style for pagination block

--- a/react-ts/src/components/Content/Content.css
+++ b/react-ts/src/components/Content/Content.css
@@ -30,6 +30,12 @@ main {
   row-gap: 30px;
 }
 
+.main__pages {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (max-width: 500px) {
   .main__title {
     font-size: 18px;
